--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
-<head></head>
+<head>
+    <title>Yofiel Te</title>
+    <link rel="stylesheet" href="home.css">
+</head>
 <body>
+
+    <ul>
+        <li><a href="index.html"></a></li>
+        <li><a href="projects.html"></a></li>
+    </ul>
 
 </body>
 </html>
