--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <html>
+
 <head>
     <title>Yofiel Te</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="home.css">
 </head>
+
 <body>
 
-    <ul>
-        <li><a href="index.html"></a></li>
-        <li><a href="projects.html"></a></li>
+    <ul id="navBar">
+        <li class="homeButton"><a href="index.html"><img src="HomeIcon.png" alt="Home Icon"></a></li>
+        <li class="codeButton"><a href="projects.html"><img src="CodeIcon.png" alt="Code Icon"></a></li>
     </ul>
 
+    <div id="content">
+        <div class="columnL">
+
+        </div>
+        <div class="columnR">
+
+        </div>
+    </div>
+
 </body>
+
 </html>
