--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 <body>
 
     <ul id="navBar">
-        <li class="homeButton"><a href="index.html"><img src="HomeIcon.png" alt="Home Icon"></a></li>
-        <li class="codeButton"><a href="projects.html"><img src="CodeIcon.png" alt="Code Icon"></a></li>
+        <a href="index.html">
+            <li class="homeButton"><img src="HomeIcon.png" alt="Home Icon"></li>
+        </a>
+        <a href="projects.html">
+            <li class="codeButton"><img src="CodeIcon.png" alt="Code Icon"></li>
+        </a>
     </ul>
 
     <div id="content">
         <div class="columnL">
-
+            <iframe style="border-radius:2px"
+                src="https://open.spotify.com/embed/track/3bbZtkmyBJcibe8Xg101ti?utm_source=generator" width="80%"
+                height="152" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
         </div>
         <div class="columnR">
 
